# paycore

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/: BUGBOT.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 09a75fcf872e_initial_schema.py  2bfdbfff13c8_add_pix_out_transaction_type.py  a82ae7b338f7_add_fraud_status_to_transactions.py  acf930e39d05_add_amount_check_constraints.py
app/: main.py
app/api/: deps.py  errors.py
app/api/routes/: accounts.py  admin.py  auth.py  pix.py  transfers.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/schemas/: account.py  auth.py  fraud.py  reconciliation.py  transaction.py
app/services/: auth.py  fraud.py  ledger.py  payment.py  reconciliation.py
docs/: ARQUITETURA.md  SEGURANCA.md  arquitetura-c4.md  modelo-dados.md  requisitos.md
scripts/: setup-branch-protection.ps1  test.ps1  test.sh
tests/: conftest.py  test_api.py  test_deposit.py  test_fraud.py  test_ledger.py  test_reconciliation.py  test_transfers.py  test_withdrawal.py
